--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./resourses/styles.css">
 </head>
 <body>
+  <div class="container">
 
     <h1>Налаштування</h1>
 
@@ -23,7 +24,8 @@
         <tbody>
           <thead>
             <tr>
-              <th class="table-head">Settings name</th>
+              <th class="table-head">
+                <a href="settings.html">Set-Creator-Logic</a>
               <th class="table-head">Status</th>
             </tr>
           </thead>
@@ -34,7 +36,7 @@
             <td class="status"><span class="draft">Draft</span></td>
             <td class="delete-icon">
               <button type="button" class="delete-button">
-                <img src="./delete-icon.svg" alt="delete icon" />
+                <img src="./resourses/images/icons/delete-icon.svg" alt="delete icon" />
               </button>
             </td>
           </tr>
@@ -45,7 +47,7 @@
             <td class="status"><span class="active">Active</span></td>
             <td class="delete-icon">
               <button type="button" class="delete-button">
-                <img src="./delete-icon.svg" alt="delete icon" />
+                <img src="./resourses/images/icons/delete-icon.svg" alt="delete icon" />
               </button>
             </td>
           </tr>
@@ -56,12 +58,12 @@
             <td class="status"><span class="draft">Draft</span></td>
             <td class="delete-icon">
               <button type="button" class="delete-button">
-                <img src="./delete-icon.svg" alt="delete icon" />
+                <img src="./resourses/images/icons/delete-icon.svg" alt="delete icon" />
               </button>
             </td>
           </tr>
         </tbody>
       </table>
-
+ </div>
 </body>
 </html>
