add links in header

--- a/settings.html
+++ b/settings.html
@@ -15,8 +15,8 @@
     <div class="container">
       <div class="wrapper">
         <div class="headers-wrapper">
-          <h2 class="headers">Home</h2>
-          <h2 class="headers">Setting Name</h2>
+          <a href="index.html" class="headers">Home</h2>
+          <a href="settings.html" class="headers">Setting Name</h2>
         </div>
         <div class="btn-wrapper">
           <button class="btn">Discard</button>
