--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Налаштування</title>
     <link rel="stylesheet" href="./resourses/reset.css">
-    <link rel="stylesheet" href="./resourses/styles.css">
+    <link rel="stylesheet" href="./scss/styles.css">
 </head>
 <body>
   <div class="container">
 
     <h1>Налаштування</h1>
 
-    <div class="wraper">
-        <a href="#" class="link active-link">All settings</a>
-        <a href="#"class="link">Published</a>
-        <a href="#"class="link">BTC</a>
-        <a href="#"class="link">USDT</a>
-        <a href="#"class="link">TON</a>
-    </div>
+    <nav class="nav">
+        <a href="#" class="nav-link active-link">All settings</a>
+        <a href="#" class="nav-link">Published</a>
+        <a href="#" class="nav-link">BTC</a>
+        <a href="#" class="nav-link">USDT</a>
+        <a href="#" class="nav-link">TON</a>
+      </nav>
 
    <table class="table">
         <tbody>
