--- a/index.html
+++ b/index.html
@@ -1,69 +1,288 @@
 <!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Налаштування</title>
-    <link rel="stylesheet" href="./resourses/reset.css">
-    <link rel="stylesheet" href="./scss/styles.css">
-</head>
-<body>
-  <div class="container">
-
-    <h1>Налаштування</h1>
-
-    <nav class="nav">
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Site</title>
+    <link rel="stylesheet" href="./resourses/reset.css" />
+    <link rel="stylesheet" href="./scss/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="container">
+      <div class="index-wrapper">
+        <h1>Settings</h1>
+        <a href="settings.html" class="btn-link"> Create Setting </a>
+      </div>
+      <nav class="nav">
         <a href="#" class="nav-link active-link">All settings</a>
         <a href="#" class="nav-link">Published</a>
         <a href="#" class="nav-link">BTC</a>
         <a href="#" class="nav-link">USDT</a>
         <a href="#" class="nav-link">TON</a>
       </nav>
-
-   <table class="table">
+      <table class="table">
         <tbody>
           <thead>
             <tr>
-              <th class="table-head">
-                <a href="settings.html">Set-Creator-Logic</a>
+              <th class="table-head">Settings</th>
               <th class="table-head">Status</th>
             </tr>
           </thead>
-          <tr class="table-elem">
+
+          <tr class="table-elem hidden settingTemplateElem">
             <td>
-              <a href="#" class="table-link">Content</a>
+              <a href="settings.html" class="table-link">Content</a>
             </td>
-            <td class="status"><span class="draft">Draft</span></td>
+            <td class="status">
+              <span class="setting-status">Draft</span>
+            </td>
             <td class="delete-icon">
-              <button type="button" class="delete-button">
-                <img src="./resourses/images/icons/delete-icon.svg" alt="delete icon" />
-              </button>
-            </td>
-          </tr>
-          <tr class="table-elem">
-            <td>
-              <a href="#" class="table-link">Content</a>
-            </td>
-            <td class="status"><span class="active">Active</span></td>
-            <td class="delete-icon">
-              <button type="button" class="delete-button">
-                <img src="./resourses/images/icons/delete-icon.svg" alt="delete icon" />
-              </button>
-            </td>
-          </tr>
-          <tr class="table-elem">
-            <td>
-              <a href="#" class="table-link">Content</a>
-            </td>
-            <td class="status"><span class="draft">Draft</span></td>
-            <td class="delete-icon">
-              <button type="button" class="delete-button">
+              <button type="button" class="delete-button remove-btn">
                 <img src="./resourses/images/icons/delete-icon.svg" alt="delete icon" />
               </button>
             </td>
           </tr>
         </tbody>
       </table>
- </div>
-</body>
+      <div class="img-wrapper hidden emptyState">
+        <img src="./resourses/images/chair.png" alt="chair" class="img" />
+        <p class="text">Oopsie, seems that you have no settings yet</p>
+        <p class="little-text">Create your first setting!</p>
+        <a href="settings.html" class="btn-link">+</a>
+      </div>
+    </div>
+    <script type="application/json" id="state">
+      {
+        "currencies": [
+          {
+            "id": 1,
+            "title": "BTC",
+            "value": 0.0001
+          },
+          {
+            "id": 2,
+            "title": "USDT",
+            "value": 1
+          }
+        ],
+        "settings": [
+          {
+            "id": 1,
+            "title": "BTC & USDT increase each 2 sec for T-Shirts",
+            "status": "active",
+            "formulas": [
+              {
+                "id": 1,
+                "title": "BTC in used for T-Shirts",
+                "formula": "X * Y",
+                "frequency": 2000,
+                "currency": "BTC",
+                "targets": {
+                  "collectionsIds": [1, 2],
+                  "products": [
+                    {
+                      "id": 1,
+                      "variantsIds": [1, 2]
+                    }
+                  ]
+                }
+              },
+              {
+                "id": 1,
+                "title": "USDT in used for hoodies",
+                "formula": "X + Y",
+                "frequency": 2000,
+                "currency": "USDT",
+                "targets": {
+                  "collectionsIds": [3, 4],
+                  "products": [
+                    {
+                      "id": 3,
+                      "variants": [1, 2, 3]
+                    }
+                  ]
+                }
+              }
+            ]
+          },
+          {
+            "id": 2,
+            "title": "BTC & USDT increase each 2 sec for T-Shirts",
+            "status": "draft",
+            "formulas": [
+              {
+                "id": 1,
+                "title": "BTC in used for T-Shirts",
+                "formula": "X * Y",
+                "frequency": 2000,
+                "currency": "BTC",
+                "targets": {
+                  "collectionsIds": [1, 2],
+                  "products": [{
+                      "id": 1,
+                      "variantsIds": [1, 2]
+                    }
+                  ]
+                }
+              },
+              {
+                "id": 1,
+                "title": "USDT in used for hoodies",
+                "formula": "X + Y",
+                "frequency": 2000,
+                "currency": "USDT",
+                "targets": {
+                  "collectionsIds": [3, 4],
+                  "products": [
+                    {
+                      "id": 3,
+                      "variants": [1, 2, 3]
+                    }
+                  ]
+                }
+              }
+            ]
+          },
+          {
+            "id": 3,
+            "title": "BTC & USDT increase each 2 sec for T-Shirts",
+            "status": "active",
+            "formulas": [
+              {
+                "id": 1,
+                "title": "BTC in used for T-Shirts",
+                "formula": "X * Y",
+                "frequency": 2000,
+                "currency": "BTC",
+                "targets": {
+                  "collectionsIds": [1, 2],
+                  "products": [
+                    {
+                      "id": 1,
+                      "variantsIds": [1, 2]
+                    }
+                  ]
+                }
+              },
+              {
+                "id": 1,
+                "title": "USDT in used for hoodies",
+                "formula": "X + Y",
+                "frequency": 2000,
+                "currency": "USDT",
+                "targets": {
+                  "collectionsIds": [3, 4],
+                  "products": [
+                    {
+                      "id": 3,
+                      "variants": [1, 2, 3]
+                    }
+                  ]
+                }
+              }
+            ]
+          }
+        ],
+        "collections": [
+          {
+            "id": 1,
+            "title": "T-Shirts"
+          },
+          {
+            "id": 2,
+            "title": "Hoodies"
+          },
+          {
+            "id": 3,
+            "title": "Socks"
+          },
+          {
+            "id": 4,
+            "title": "Caps"
+          }
+        ],
+        "products": [
+          {
+            "id": 1,
+            "title": "Product 1",
+            "price": 11,
+            "variants": [
+              {
+                "id": 1,
+                "title": "Black",
+                "price": 11
+              },
+              {
+                "id": 2,
+                "title": "Red",
+                "price": 12
+              },
+              {
+                "id": 3,
+                "title": "White",
+                "price": 13
+              }
+            ]
+          },
+          {
+            "id": 2,
+            "title": "Product 2",
+            "price": 15,
+            "variants": []
+          },
+          {
+            "id": 3,
+            "title": "Product 3",
+            "price": 20.99,
+            "variants": [
+              {
+                "id": 1,
+                "title": "Black",
+                "price": 29.99
+              },
+              {
+                "id": 2,
+                "title": "Red",
+                "price": 20.99
+              },
+              {
+                "id": 3,
+                "title": "White",
+                "price": 29.99
+              }
+            ]
+          },
+          {
+            "id": 4,
+            "title": "Product 4",
+            "price": 50,
+            "variants": [
+              {
+                "id": 1,
+                "title": "XXL",
+                "price": 55.99
+              },
+              {
+                "id": 2,
+                "title": "XL",
+                "price": 51.99
+              },
+              {
+                "id": 3,
+                "title": "L",
+                "price": 50
+              }
+            ]
+          }
+        ]
+      }
+    </script>
+    <script src="./scripts/satting-page.js"></script>
+  </body>
 </html>
